# rustls

rustls/: Cargo.toml
rustls/examples/: limitedclient.rs  simple_0rtt_client.rs  simpleclient.rs
rustls/examples/internal/: bench.rs  bogo_shim.rs  trytls_shim.rs
rustls/fake_std/: Cargo.toml  readme.md
rustls/fake_std/src/: error.rs
rustls/internal_std/: Cargo.toml
rustls/src/: anchors.rs  keylog_no_std.rs  keylog_uefi.rs  lib.rs  quic.rs  sign.rs  ticketer.rs  verify.rs  verifybench.rs  x509.rs
rustls/src/client/: common.rs  hs.rs  mod.rs  tls13.rs
rustls/src/msgs/: handshake.rs  handshake_test.rs  persist.rs  persist_test.rs
rustls/src/server/: handy.rs  hs.rs  mod.rs
rustls/tests/: api.rs
rustls/tests/common/: mod.rs
