[package]
name = "rustls"
version = "0.19.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "../README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false

[dependencies]
log = { version = "0.4.4", optional = true}
ring = { git = "https://github.com/jyao1/ring", branch="uefi_support", default-features = false }
sct = { git = "https://github.com/jyao1/sct.rs.git", branch="uefi_support" }
webpki =  {git = "https://github.com/jyao1/webpki.git", branch="uefi_support"}

[target.'cfg(target_os = "uefi")'.dependencies]
uefi_std_stub = { git = "https://github.com/jyao1/rust-uefi-std-stub.git", branch = "master"}

[features]
default = ["logging", "webpki/std"]
logging = ["log"]
dangerous_configuration = []
quic = []
alloc = ["ring/alloc", "webpki/alloc"]

[dev-dependencies]
env_logger = "0.8.2"
log = "0.4.4"
webpki-roots = {git = "https://github.com/jyao1/webpki-roots.git", branch="uefi_support"}
criterion = "0.3.0"
rustls-pemfile = "0.2.0"
base64 = "0.13.0"

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[bench]]
name = "benchmarks"
path = "tests/benchmarks.rs"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
