[package]
name = "fake_std"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"

description = "for rustls no_std use, export rustls used functions, traits and structs in std"
readme = "readme.md"

[dependencies.hashbrown]
version = "0.9.1"
# default-features = false

[dependencies.spin]
version = "0.4.9"
